2005-04-15  James Turner  <james@worldforge.org>

    * test/tests.cpp, tests/commander.cpp, tests/controller.cpp: add tests for 
      sight of move ops, and fix bugs in handling of move ops by the stub
      server.
      
    * Eris/IGRouter.cpp, Eris/View.cpp, Eris/Entity.cpp, Eris/Connection.cpp:
      remove debug output which is no longer required.

2005-04-14  Al Riddoch  <alriddoch@zepler.org>

	* test/controller.cpp: Add newline to end of file. Congrats James,
	  next time should be a gold star.

2005-04-14  James Turner  <james@worldforge.org>

    * test/tests.cpp: add in talk/Say test
    
    * test/agent.cpp: make broadcast routines set FROM on percept op.

2005-04-14  James Turner  <james@worldforge.org>

	* Eris/BaseConnection.cpp: remove streamEnd() call from hardDisconnect,
	  since it is unecessary.
	  
	* Eris/Connection.cpp: in the dtor, explicitly bring down the connection
	  while our vtable is still valid, to avoid pure virtual calls.
	  
	* test/commander.cpp: change how sight broadcasts are decoded, to avoid
	  ambiguity.

2005-04-14  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Avatar.cpp: Initialise world time offset to zero.

2005-04-14  Al Riddoch  <alriddoch@zepler.org>

	* test/commander.cpp: Add smart dynamic casts when handling operation
	  arguments as necessary.

2005-04-14  James Turner  <james@worldforge.org>

	* Eris/Entity.cpp, Eris/Entity.h, Eris/EntityRouter.cpp: changes to
	  handle sound(action) broadcasts, consume the op and trigger a
	  virtual / signal pair on Entity. The virtual method is called
	  onSoundAction, the signal is called 'Noise' - better names would be
	  appreciated.

	* tests/tests.cpp: add tests for hearing speech and other sound of other
	  actions.

2005-04-10  James Turner  <james@worldforge.org>

	* configure.ac: bump version to 1.3.4, so clients can test for new
	  Connection API.

2005-04-06  Al Riddoch  <alriddoch@zepler.org>
